--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hero Pet</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -14,21 +19,31 @@
     <!-- Este es el header -->
     <div>
         <header class="header-wrapper">
-            <div class="header-logo">
-                <a href="index.html"><img class="logo" src="assets/Media/logobyn.png" alt="logo"></a>
-            </div>
-
-            <div class="header-tittle">
-                <h1></h1>
-            </div>
-
-            <div class="novedades">
-                <p><a href="index.html">Novedades</a></p>
-            </div>
-
-            <div class="registro">
-                <p><a href="Registro.html">Registrate</a></p>
-            </div>
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">
+                    <img src="/assets/Media/Logo.png" alt="Bootstrap" width="30" height="24">
+                </a>
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">We Love Dogs</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarText">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="/Registro.html"  class="nav-link" href="#">Registro</a>
+                            </li>
+                        </ul>
+                        <span class="navbar-text">
+                            Hero Pet
+                        </span>
+                    </div>
+                </div>
+            </nav>
         </header>
         <!--Jumbotron (Hero)  -->
 
@@ -94,7 +109,7 @@
     <div class="adicional-wrapper">
         <!-- <div class="flex-container"> -->
         <div class="adicionales1-wrapper">
-            <img class="imagen-full2" src="assets/Media/perritoblog.png" alt="Dogs"> 
+            <img class="imagen-full2" src="assets/Media/perritoblog.png" alt="Dogs">
             <h1>Blog</h1>
         </div>
     </div>
@@ -146,17 +161,17 @@
         <section class="ft-social">
             <ul class="ft-social-list">
                 <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/Facebook.png" alt="fb"></a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <img class="network-img" src="assets/Media/Facebook.png" alt="fb"></a>
                 </li>
                 <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                    <img class="network-img" src="assets/Media/Instagram.png" alt="ig"></a>
+                        <img class="network-img" src="assets/Media/Instagram.png" alt="ig"></a>
                 </li>
                 <li><a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer">
-                    <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt"></a>
+                        <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt"></a>
                 </li>
                 <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
-                    <img class="network-img" src="assets/Media/twitter.png" alt="tw"></a>
+                        <img class="network-img" src="assets/Media/twitter.png" alt="tw"></a>
                 </li>
             </ul>
         </section>
@@ -175,5 +190,6 @@
         </section>
     </footer>
 </body>
+
 </html>
 <!-- Proyecto Creado por Angel Daniel (Kaniltazo) -->
