--- a/Registro.html
+++ b/Registro.html
@@ -103,7 +103,7 @@
                             <div class="text-center text-lg-start mt-4 pt-2">
                                 <button type="button" class="btn btn-primary btn-lg"
                                     style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                                <p class="small fw-bold mt-2 pt-1 mb-0">Aun no das de alta a tu peludo ? <a href="#!"
+                                <p class="small fw-bold mt-2 pt-1 mb-0">Aun no das de alta a tu peludo ? <a href="/altamascota.html"
                                         class="link"> Registralo </a></p>
                             </div>
 
