--- a/index.html
+++ b/index.html
@@ -17,35 +17,59 @@
 
 <body>
     <!-- Este es el header -->
-    <div>
-        <header class="header-wrapper">
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">
-                    <img src="/assets/Media/Logo.png" alt="Bootstrap" width="30" height="24">
-                </a>
+    <nav class="navbar fixed-top">
+        <div class="container-fluid">
+            <nav class="navbar">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">We Love Dogs</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="/Registro.html"  class="nav-link" href="#">Registro</a>
-                            </li>
-                        </ul>
-                        <span class="navbar-text">
-                            Hero Pet
-                        </span>
-                    </div>
+                    <a class="navbar-brand" href="#">
+                        <img src="/assets/Media/Logo.png" alt="Logo" width="30" height="24"
+                            class="d-inline-block align-text-top">
+                        We Love Dogs
+                    </a>
                 </div>
             </nav>
-        </header>
-        <!--Jumbotron (Hero)  -->
+            <a class="navbar-brand" href="/registro.html"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Bienvenido</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/registro.html">Registrate</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Lo que hay para tu Perruno
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Carnet Perruna</a></li>
+                                <li><a class="dropdown-item" href="#">Cuidados para tu MAascota</a></li>
+                                <li><a class="dropdown-item" href="#">Adopta</a></li>
+                                <li><a class="dropdown-item" href="#">Hero Alert</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Unete a nuestra Red</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+    </header>
+    <!--Jumbotron (Hero)  -->
 
     </div>
     <div class="hero-wrapper">
