--- a/index.html
+++ b/index.html
@@ -15,61 +15,65 @@
 </head>
 
 
-<body>
-    <!-- Este es el header -->
-    <nav class="navbar fixed-top">
-        <div class="container-fluid">
-            <nav class="navbar">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <img src="/assets/Media/Logo.png" alt="Logo" width="30" height="24"
-                            class="d-inline-block align-text-top">
-                        We Love Dogs
-                    </a>
-                </div>
-            </nav>
-            <a class="navbar-brand" href="/registro.html"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-                aria-controls="offcanvasNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                aria-labelledby="offcanvasNavbarLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Bienvenido</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/registro.html">Registrate</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Lo que hay para tu Perruno
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Carnet Perruna</a></li>
-                                <li><a class="dropdown-item" href="#">Cuidados para tu MAascota</a></li>
-                                <li><a class="dropdown-item" href="#">Adopta</a></li>
-                                <li><a class="dropdown-item" href="#">Hero Alert</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Unete a nuestra Red</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+
+<header>
+<div>
+<nav class="navbar fixed-top">
+    <div class="container-fluid">
+        <nav class="navbar">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/assets/Media/Logo.png" alt="Logo" width="30" height="24"
+                        class="d-inline-block align-text-top">
+                    We Love Dogs
+                </a>
+            </div>
+        </nav>
+        <a class="navbar-brand" href="/altamascota.html">CRUD</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Bienvenido</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/registro.html">Registrate</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Lo que hay para tu Perruno
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Carnet Perruna</a></li>
+                            <li><a class="dropdown-item" href="#">Cuidados para tu MAascota</a></li>
+                            <li><a class="dropdown-item" href="#">Adopta</a></li>
+                            <li><a class="dropdown-item" href="#">Hero Alert</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Unete a nuestra Red</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
-    </nav>
-    </header>
-    <!--Jumbotron (Hero)  -->
+    </div>
+</nav>
+</div>
+</header>
+
+
+<body>
+<!--Jumbotron (Hero)  -->
 
     </div>
     <div class="hero-wrapper">
