--- a/altamascota.html
+++ b/altamascota.html
@@ -45,7 +45,7 @@
 
 <header>
     <div>
-    <nav class="navbar fixed-top">
+    <nav class="navbar">
         <div class="container-fluid">
             <nav class="navbar">
                 <div class="container-fluid">
@@ -57,8 +57,7 @@
                 </div>
             </nav>
             <a class="navbar-brand" href="/altamascota.html">CRUD</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">Menu<span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
