--- a/index.html
+++ b/index.html
@@ -14,80 +14,81 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-
-
 <header>
-<div>
-<nav class="navbar fixed-top">
-    <div class="container-fluid">
+    <div>
+        <!-- <nav class="navbar fixed-top"> -->
         <nav class="navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="/assets/Media/Logo.png" alt="Logo" width="30" height="24"
-                        class="d-inline-block align-text-top">
-                    We Love Dogs
-                </a>
+                <nav class="navbar">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">
+                            <img src="/assets/Media/Logo.png" alt="Logo" width="30" height="24"
+                                class="d-inline-block align-text-top">
+                            We Love Dogs
+                        </a>
+                    </div>
+                </nav>
+                <a class="navbar-brand" href="/altamascota.html">CRUD</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">Menu
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Bienvenido</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/registro.html">Registrate</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Lo que hay para tu Perruno
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Carnet Perruna</a></li>
+                                    <li><a class="dropdown-item" href="#">Cuidados para tu MAascota</a></li>
+                                    <li><a class="dropdown-item" href="#">Adopta</a></li>
+                                    <li><a class="dropdown-item" href="#">Hero Alert</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Unete a nuestra Red</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </nav>
-        <a class="navbar-brand" href="/altamascota.html">CRUD</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-            aria-controls="offcanvasNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Bienvenido</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/registro.html">Registrate</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Lo que hay para tu Perruno
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Carnet Perruna</a></li>
-                            <li><a class="dropdown-item" href="#">Cuidados para tu MAascota</a></li>
-                            <li><a class="dropdown-item" href="#">Adopta</a></li>
-                            <li><a class="dropdown-item" href="#">Hero Alert</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Unete a nuestra Red</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </div>
-</nav>
-</div>
 </header>
 
 
 <body>
-<!--Jumbotron (Hero)  -->
-
-    </div>
-    <div class="hero-wrapper">
-        <div class="hero">
-            <div class="hero-inner">
-                <h1>El Lugar de Tu Perruno</h1>
-                <p class="parra">Lleva toda la informacion de tu perruno siempre a la mano</p>
-            </div>
+    <div>
+        <div>
+            <section class="container-hero">
+                <p>El Lugar de Tu Perruno</p>
+                <h1>Lleva la informacion de tu perruno siempre a la mano</h1>
+            </section>
         </div>
     </div>
-    <!-- servicios  -->
+
+
+    
     <div class="servicios">
         <p>Consiente a Tu Perruno</p>
     </div>
+
+
     <div class="servicios-wrapper">
         <div class="card">
             <img class="imagen-full" src="assets/Media/perrito0.jpg" alt="Dogs">
@@ -104,7 +105,8 @@
             <div class="container">
                 <h4>Cuida la Salud de Tu Mascota</h4>
                 <br>
-                <p class="text-justify"> Agenda el servicio para tu mascota dentro de la red de afiliados a Hero Pet,
+                <p class="text-justify"> Agenda el servicio para tu mascota dentro de la red de afiliados a Hero
+                    Pet,
                     encontraras de todo Veterinarios, Especialistas, Baños, Guarderías... </p>
                 <br>
             </div>
@@ -130,9 +132,7 @@
             </div>
         </div>
     </div>
-
-
-
+    </div>
     <!--Adicionales  -->
     <div class="adicional-wrapper">
         <!-- <div class="flex-container"> -->
@@ -141,83 +141,82 @@
             <h1>Blog</h1>
         </div>
     </div>
-
-    <div class="container"></div>
-
-
-    <!--Iniciando el Footer  -->
-    <footer>
-        <section class="ft-main">
-            <div class="ft-main-item">
-                <h2 class="ft-title">Conocenos</h2>
-                <ul>
-                    <li><a href="#">Quienes Somos</a></li>
-                    <li><a href="#">Informacion Corporativa</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-            </div>
-            <div class="ft-main-item">
-                <h2 class="ft-title">Ayudamos a tu negocio</h2>
-                <ul>
-                    <li><a href="#">Programa de afiliados</a></li>
-                    <li><a href="#">Registra tu fundacion</a></li>
-                </ul>
-            </div>
-            <div class="ft-main-item">
-                <h2 class="ft-title">Categorias</h2>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Registrate</a></li>
-                    <li><a href="#">Crear Expediente</a></li>
-                    <li><a href="#">Cuidado para tu mascota</a></li>
-                    <li><a href="#">Adopcion</a></li>
-                    <li><a href="#">Hero Alert</a></li>
-                </ul>
-            </div>
-            <div class="ft-main-item">
-                <h2 class="ft-title">NEWSLETTER</h2>
-                <p>Recibe todas nuestras novedades en correo</p>
-                <form>
-                    <input type="email" name="email" placeholder="Enter email address">
-                    <input type="submit" value="Subscribe">
-                </form>
-            </div>
-        </section>
-
-        <!-- Footer social -->
-        <section class="ft-social">
-            <ul class="ft-social-list">
-                <li>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                        <img class="network-img" src="assets/Media/Facebook.png" alt="fb"></a>
-                </li>
-                <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                        <img class="network-img" src="assets/Media/Instagram.png" alt="ig"></a>
-                </li>
-                <li><a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer">
-                        <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt"></a>
-                </li>
-                <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
-                        <img class="network-img" src="assets/Media/twitter.png" alt="tw"></a>
-                </li>
-            </ul>
-        </section>
-
-        <!-- Footer legal -->
-        <section class="ft-legal">
-            <div class="logoimg-wrapper">
-                <a href="index.html" target="_blank" rel="noopener noreferrer">
-                    <img class="logo-img" src="assets/Media/Logo.png" alt="logof">
-                </a>
-            </div>
-            <ul class="ft-legal-list">
-                <li><a href="#">Condiciones &amp; Aviso de Privacidad</a></li>
-                <li>&copy; 2023 / Kaniltazo para Ucamp Proyecto 1</li>
-            </ul>
-        </section>
-    </footer>
+    </div>
 </body>
+
+<!--Iniciando el Footer  -->
+<footer>
+    <section class="ft-main">
+        <div class="ft-main-item">
+            <h2 class="ft-title">Conocenos</h2>
+            <ul>
+                <li><a href="#">Quienes Somos</a></li>
+                <li><a href="#">Informacion Corporativa</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </div>
+        <div class="ft-main-item">
+            <h2 class="ft-title">Ayudamos a tu negocio</h2>
+            <ul>
+                <li><a href="#">Programa de afiliados</a></li>
+                <li><a href="#">Registra tu fundacion</a></li>
+            </ul>
+        </div>
+        <div class="ft-main-item">
+            <h2 class="ft-title">Categorias</h2>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">Registrate</a></li>
+                <li><a href="#">Crear Expediente</a></li>
+                <li><a href="#">Cuidado para tu mascota</a></li>
+                <li><a href="#">Adopcion</a></li>
+                <li><a href="#">Hero Alert</a></li>
+            </ul>
+        </div>
+        <div class="ft-main-item">
+            <h2 class="ft-title">NEWSLETTER</h2>
+            <p>Recibe todas nuestras novedades en correo</p>
+            <form>
+                <input type="email" name="email" placeholder="Enter email address">
+                <input type="submit" value="Subscribe">
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer social -->
+    <section class="ft-social">
+        <ul class="ft-social-list">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Facebook.png" alt="fb"></a>
+            </li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Instagram.png" alt="ig"></a>
+            </li>
+            <li><a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt"></a>
+            </li>
+            <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/twitter.png" alt="tw"></a>
+            </li>
+        </ul>
+    </section>
+
+    <!-- Footer legal -->
+    <section class="ft-legal">
+        <div class="logoimg-wrapper">
+            <a href="index.html" target="_blank" rel="noopener noreferrer">
+                <img class="logo-img" src="assets/Media/Logo.png" alt="logof">
+            </a>
+        </div>
+        <ul class="ft-legal-list">
+            <li><a href="#">Condiciones &amp; Aviso de Privacidad</a></li>
+            <li>&copy; 2023 / Kaniltazo para Ucamp Proyecto 1</li>
+        </ul>
+    </section>
+</footer>
+
 
 </html>
 <!-- Proyecto Creado por Angel Daniel (Kaniltazo) -->
